<resources>
    <string name="app_name">Indecisive</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search Hint</string>
    <string name="list_name">List Name</string>
    <string name="enter_values_separated_by_return">Enter values (separated by return key)</string>
    <string name="is_drawer_list">Is Drawer List</string>
    <string name="delete_list">Delete List</string>
    <string name="update_list">Update List</string>
    <string name="make_a_choice">Make a Choice</string>
    <string name="error_list_insert">Error inserting list</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="pick_from_list">Pick</string>
    <string name="create_list">Create List</string>
    <string name="error_deleting_list">Error deleting list</string>
    <string name="app_search">Search</string>
    <string name="choice">Choice:</string>
    <string name="delete_list_popup">Delete List</string>
    <string name="delete_list_prompt">Are you sure you want to delete the list?</string>
    <string name="deleted">Deleted</string>
    <string name="empty_list">List is Empty</string>
    <string name="reload_list">Would you like to reload the list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="list_exists">List already exists</string>
    <string name="list_updated">List Updated</string>
    <string name="list_created">List Created</string>
</resources>
